--- a/wp-content/themes/10up/resources/assets/styles/layouts/_nav.scss
+++ b/wp-content/themes/10up/resources/assets/styles/layouts/_nav.scss
@@ -18,7 +18,7 @@
 
       span {
         float: left;
-        background-color: $white;
+        background: $white;
         -webkit-mask: url(/10up/wp-content/uploads/2019/10/close.svg) no-repeat 50% 50%;
         mask: url(/10up/wp-content/uploads/2019/10/close.svg) no-repeat 50% 50%;
         display: block;
@@ -97,7 +97,7 @@
 
       span {
         float: left;
-        background-color: $white;
+        background: $white;
         -webkit-mask: url(/10up/wp-content/uploads/2019/10/menu.svg) no-repeat 50% 50%;
         mask: url(/10up/wp-content/uploads/2019/10/menu.svg) no-repeat 50% 50%;
         display: block;
